@@ -10,6 +10,13 @@ Version 10     ??
 
 
 
+Version 9      Live Server Fixes
+
+--Added detailed logging around ending games to catch DENIED bug during
+  wait_move.
+
+
+
 
 Version 9      2014-November-27
 
